--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sequelize": "^6.37.5",
     "vite-express": "^0.20.0"
   },
   "devDependencies": {
