--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "vite-express": "^0.20.0"
   },
   "devDependencies": {
