--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
+    "sequelize": "^6.37.6",
     "vite-express": "^0.20.0"
   },
   "devDependencies": {
